# myApp

./: .env  .gitignore  Makefile  deploy-gcp.sh  docker-compose.yml
backend/: Dockerfile  build.zig  build.zig.zon
backend/src/: db.zig  main.zig  router.zig
backend/src/handlers/: health.zig  items.zig  users.zig
frontend/: Cargo.toml  Dockerfile  index.html  nginx.conf
frontend/src/: main.rs
