[package]
name = "myapp-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8.12", features = ["csr"] }
leptos_router = { version = "0.8.9" }
leptos_meta = { version = "0.8.5" }
console_error_panic_hook = "0.1"
# 【重要】 ここを =0.2.95 に変更してください（=0.2.105 だとエラーになります）
wasm-bindgen = "=0.2.105"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = { version = "0.6", features = ["http"] }
web-sys = { version = "0.3", features = ["Request", "Response", "Headers"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1